# o3de-cli

./: .gitignore  CHANGELOG.md  LICENSE.txt  LICENSE_APACHE2.TXT  LICENSE_MIT.TXT  README.md  _check_resolve.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
o3de_cli/: __init__.py  __main__.py  command_specs.py  mcp_server.py
o3de_cli/ai/: __init__.py  command_router.py  conversation.py  coordinator.py  provider.py  session.py  voice.py
o3de_cli/commands/: __init__.py  ai.py  audit.py  config.py  deps.py  engine.py  gem.py  gui.py  manifest.py  object.py  overlay.py  project.py  publish.py  register.py  registry.py  repo.py  template.py  workspace.py
o3de_cli/core/: __init__.py  auth.py  cmake_manifest.py  config.py  gem_package.py  git_utils.py  hooks.py  json_output.py  lockfile.py  models.py  network.py  paths.py  policy.py  resolver.py  schema.py  solver.py  store.py  upgrade.py  workspace.py
o3de_cli/data/: countries.json
tests/: __init__.py  conftest.py  test_ai.py  test_ai_commands.py  test_ai_provider.py  test_cli.py  test_command_router.py  test_commands.py  test_commands_extended.py  test_config.py  test_config_cmd.py  test_coverage_h2.py  test_deps_extended.py  test_e2e_acceptance.py  test_gem_package.py  test_gem_workspace_extended.py  test_git_utils.py  test_git_utils_extended.py  test_gui.py  test_hooks.py  test_manifest_extended.py  test_mcp_server.py  test_models.py  test_network.py  test_overlay_project_extended.py  test_overrides.py  test_paths.py  test_policy.py  test_publish.py  test_register.py  test_register_extended.py  test_registry_distribution.py  test_registry_extended.py  test_resolver.py  test_resolver_extended.py  test_solver.py  test_store.py  test_store_extended.py  test_template_repo_extended.py  test_upgrade.py  (+5 more)
