[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o3de-cli"
version = "0.1.0"
description = "Package manager and CLI for the O3DE ecosystem"
readme = "README.md"
license = {text = "Apache-2.0 OR MIT"}
requires-python = ">=3.10"
authors = [
    {name = "O3DE Foundation", email = "info@o3de.org"}
]
keywords = ["o3de", "game-engine", "cli", "package-manager"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "resolvelib>=1.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "black>=23.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
all = ["o3de-cli[dev]"]

[project.scripts]
o3de = "o3de_cli.__main__:main"
o3de-mcp = "o3de_cli.mcp_server:serve"

[project.urls]
Homepage = "https://github.com/byrcolin/o3de-cli"
Documentation = "https://github.com/byrcolin/o3de-cli#readme"
Repository = "https://github.com/byrcolin/o3de-cli.git"
Issues = "https://github.com/byrcolin/o3de-cli/issues"
Changelog = "https://github.com/byrcolin/o3de-cli/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
omit = ["o3de_cli/gui/*"]

[tool.coverage.report]
fail_under = 80
